--- a/package.json
+++ b/package.json
@@ -11,10 +11,22 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "framer": "^2.4.1",
+    "motion": "^12.0.5",
+    "nodemailer": "^6.10.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-router": "^7.1.3",
+    "react-router-dom": "^6.28.2",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
